from sqlalchemy import Column, Integer, String
from app.db.base import Base

class School(Base):
    __tablename__ = "school"

    id = Column(Integer, primary_key=True, index=True, autoincrement=True)
    name = Column(String, nullable=False, unique=True)
    