@startuml Register DataBase Schema v7
hide circle
skinparam linetype ortho

'========== MEMBER =========='
entity "Member" as M {
  *id : int <<PK>>
  last_name : varchar
  first_name : varchar
  present : bool
  arrival : date
  departure : date
  email : varchar
  personal_email : varchar
  phone : varchar
  discord : varchar
  notes : varchar
  srg : bool
  warning : int
  created_by : varchar
  created_at : date
  modified_by : varchar
  modified_at : date
  convs : bool
  portal : bool
  promotion_id : int <<FK>>
}

'========== STATUS =========='
entity "Status" as S {
  *id : int <<PK>>
  name : varchar
}

entity "Member_Status" as MS {
  *member_id : int <<FK>>
  *status_id : int <<FK>>
}

'========== PROMOTION (Académique) =========='
entity "Promotion" as P {
  *id : int <<PK>>
  year : int
  school_id : int <<FK>>
  level_id : int <<FK>>
  major_id : int <<FK>> (nullable)
}

entity "School" as E {
  *id : int <<PK>>
  name : varchar
  code : varchar
}

entity "Level" as L {
  *id : int <<PK>>
  name : varchar  ' ex: A1, A2, A3, A4, A5
  order : int     ' 1..5
}

entity "Major" as MJ {
  *id : int <<PK>>
  name : varchar
  code : varchar
  school_id : int <<FK>>
  level_id : int <<FK>>
  ' is_alternance removed
}

'========== CONTRIBUTION =========='
entity "Contribution" as C {
  *id : int <<PK>>
  member_id : int <<FK>>
  state : varchar
  payment_date : date
  amount : float
}

'========== INTERNAL REGULATION =========='
entity "IR" as IR {
  *id : int <<PK>>
  member_id : int <<FK>>
  state : varchar
  version : varchar
  signature_date : date
}

'========== ROLE =========='
entity "Role" as R {
  *id : int <<PK>>
  name : varchar
  description : varchar
  type_id : int <<FK>>
}

entity "RoleType" as RT {
  *id : int <<PK>>
  name : varchar
}

entity "Member_Role" as MR {
  *member_id : int <<FK>>
  *role_id : int <<FK>>
}

'========== RELATIONS =========='
M ||--o{ MS : has
S ||--o{ MS : classified as
M }o--|| P : promotion
M ||--o{ C : contributes
M ||--o{ IR : signs
M ||--o{ MR : holds
R ||--o{ MR : defined by
R }o--|| RT : categorized as

P }o--|| E : belongs to
P }o--|| L : level
P }o--o{ MJ : specialized in

MJ }o--|| E : defined by
MJ }o--|| L : associated with

@enduml
